feat(dependencies): 更新MyBatis相关依赖为MyBatis-Flex
将项目中的MyBatis-Plus依赖替换为MyBatis-Flex，主要变更包括：
1. 移除MyBatis-Plus及其相关依赖，确保版本兼容性。
2. 添加MyBatis-Flex的spring-boot3-starter和processor依赖。
3. 更新pom.xml文件以反映新的依赖关系。

此次更新旨在提升项目的可维护性和灵活性，确保与最新的MyBatis生态系统兼容。